--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -13,9 +13,6 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
-}
-
-#container {
   position: absolute;
   top: 0;
   left: 0;
@@ -23,77 +20,33 @@ html {
 }
 
 .panel,
-.text,
-.bottom,
-#shToggle,
-#write-up > p {
+{
   -webkit-transition-duration: 0.4s;
   -moz-transition-duration: 0.4s;
   -o-transition-duration: 0.4s;
   transition-duration: 0.4s;
 }
 
-.bottom > a,
-#thalogo path {
-  -webkit-transition-duration: 0.2s;
-  -moz-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-}
-
 .panel,
 .text > h1,
 .text > h3,
 .panel > div {
-  cursor: default;
+  cursor: pointer;
 }
 /* --- LOGO --- */
 
-#thalogo {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  top: 15px;
-  left: 25px;
-  cursor: pointer;
-  z-index: 10;
-}
-
-#thalogo path {
-  fill: #FFFFFF;
-}
-
-#thalogo:hover path {
-  fill: #D8334A;
-}
-
-#fs-link {
-  position: absolute;
-  top: 50px;
-  left: 140px;
-  z-index: 10;
-  color: #D8334A;
-  text-decoration: none;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 1em;
-  font-weight: bold;
-}
-
-#fs-link:hover {
-  color: #F8536A;
-}
-
-#fs-link.fshide {
-  display: none;
-}
-/* --- PANELS --- */
-
 .panel {
-  position: absolute;
-  top: 0;
-  width: 25%;
   height: 100%;
   text-align: center;
+  float: left;
+  transition: all 0.5s ease;
+  margin: auto;
+  top: 0;
+  right:0;
+  bottom: 0;
+  left:0;
+  vertical-align: middle;
+  position: relative;
 }
 .panel:hover{
   width: 40%;
@@ -102,49 +55,42 @@ html {
 
 *[data-count='one'] {
   background: rgba(99, 98, 98, 0.5) center/cover no-repeat;
-  left: 0%;
 }
 
 *[data-count='one']:hover{
   background: rgba(99, 98, 98, 0.1) url("../images/services/bgmarketing.png")  center/cover no-repeat;
-  left: 0%;
+  background-position:-600px; 
 }
 
 *[data-count='two'] {
   background: rgba(99, 98, 98, 0.4) center/cover no-repeat;
-  left: 25%;
 }
 
 *[data-count='two']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/lead.png")  center/cover no-repeat;
-  left: 25%;
+  background-position:-500px; 
 }
 
 *[data-count='three'] {
   background: rgba(99, 98, 98, 0.3);
-  left: 50%;
 }
 
 *[data-count='three']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/bgbackend.png")  center/cover no-repeat;
-  left: 50%;
+  background-position:-100px; 
 }
 
 *[data-count='four'] {
   background: rgba(99, 98, 98, 0.2) center/cover no-repeat;
-  left: 75%;
 }
 
 *[data-count='four']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/frontend.png")  center/cover no-repeat;
-  left: 75%;
+  background-position:-600px; 
 }
 /* --- TEXT --- */
 
 .text {
-  /* display: inline-block; */
-  /* position: relative; */
-  /* top: 37%; */
   color:  white;
   text-align: center;
   text-shadow: 0px 0px 20px #000;
@@ -187,6 +133,10 @@ html {
   border-bottom: 10px solid transparent;
 }
 
+.active{
+  width:30%;
+}
+
 .active .bottom {
   width: 100%;
   /* border-bottom: 10px solid #0a99ab; */
@@ -218,81 +168,6 @@ a {}
 }
 /* --- WRITE-UP --- */
 
-#shToggle {
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  height: 40px;
-  width: 40px;
-  background-color: #FFFFFF;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 10;
-}
-
-#shToggle.ex {
-  -webkit-transform: rotate(225deg);
-  -moz-transform: rotate(225deg);
-  -ms-transform: rotate(225deg);
-  -o-transform: rotate(225deg);
-  transform: rotate(225deg);
-}
-
-#shToggle:before,
-#shToggle:after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 18px;
-  width: 4px;
-  height: 20px;
-  border-radius: 2px;
-  background-color: #D8334A;
-}
-
-#shToggle:after {
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-#write-up {
-  position: absolute;
-  text-align: right;
-  top: 30px;
-  right: 100px;
-  width: 0;
-  color: #FFFFFF;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 1em;
-  font-weight: normal;
-  overflow: hidden;
-}
-
-#write-up > p {
-  position: relative;
-  right: 0;
-  margin: 0 0 1em;
-  text-shadow: 1px 1px 4px #333333;
-}
-
-#write-up.hide > p {
-  right: -28em;
-  opacity: 0;
-}
-
-#write-up a {
-  text-decoration: none;
-  color: #D8334A;
-  font-weight: bold;
-}
-
-#write-up a:hover {
-  color: #F8536A;
-}
-
 
 /*@media screen and (max-width: 420px){
 .panel{
@@ -306,7 +181,7 @@ a {}
   }
 }*/
 
-/* #display_mobile{
+/* .mobile{
   height: 100%;
 }
 
@@ -314,35 +189,35 @@ a {}
   height: 100%;
 } */
 
-#display_mobile .panel{
+.mobile .panel{
   position: relative;
   overflow: hidden;
   /* width: 100%; */
   height: 100%;
 }
 
-#display_mobile[data-count='one']{
+.mobile[data-count='one']{
   background: #11111100 url("../images/background/pillars/bg3.jpg")
 }
 
-#display_mobile[data-count='two']{
+.mobile[data-count='two']{
   background: #33333370 url("../images/background/pillars/bg4.png")  center/cover no-repeat;
 }
 
-#display_mobile[data-count='three']{
+.mobile[data-count='three']{
   background: #5555557a url("../images/background/pillars/bg2.png")  center/cover no-repeat;
 }
 
-#display_mobile[data-count='four']{
+.mobile[data-count='four']{
   background: #aaaaaa8c url("../images/background/bgcontact.jpg")  center/cover no-repeat;
 }
 
-#display_mobile .panel .buttom{
+.mobile .panel .buttom{
   top:60%;
   color:#000 !important;
 }
 
-#display_tablet .panel{
+.tablet .panel{
   position: relative;
   width:50%;
   height: 50%;
