--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -978,6 +978,8 @@ ul.skills {
    text-align: center;
    border-radius:  3px;
    display:inline-block;
+   z-index: 100;
+   position: re;
 }
 
 .node .description{
@@ -988,7 +990,7 @@ ul.skills {
     box-sizing:content-box;
     text-align: left;
     position: absolute;
-    z-index:1000;
+    z-index: 10000;
     border-radius: 3px;
     -webkit-transition: width 0.1s, width 0.1s; /* For Safari 3.1 to 6.0 */
     transition: width 0.1s, width 0.1s;
@@ -1073,14 +1075,14 @@ div[data-anchor="home"] .fp-tableCell{
 }
 
 .menu{
-    border: 1px solid #02bad0;
+    /* border: 1px solid #02bad0; */
     width:30px;
     height:30px;
     margin: 10px 0px 0px 10px;
 }
 
 .menu i{
-    color: #02bad0;
+    /* color: #02bad0; */
     line-height: 20px;
 }
 
@@ -1115,6 +1117,12 @@ div[data-anchor="home"] .fp-tableCell{
     margin-bottom: 20px !important;
 }
 
+a.menu:hover{
+    background: none;
+    transform: rotate(360deg);
+    transition: all 0.3s ease;
+}
+
 .loading{
   width: 100%;
   height: 100%;
@@ -1147,7 +1155,6 @@ div[data-anchor="home"] .fp-tableCell{
 .logo img{
     width: 100px;
     height: 100px;
-    iddle; */
     display: block;
     margin: auto;
     display:  block;
