--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -59,7 +59,7 @@ html {
 
 *[data-count='one']:hover{
   background: rgba(99, 98, 98, 0.1) url("../images/services/bgmarketing.png")  center/cover no-repeat;
-  background-position:-600px; 
+  /*background-position:-600px; */
 }
 
 *[data-count='two'] {
@@ -68,7 +68,7 @@ html {
 
 *[data-count='two']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/lead.png")  center/cover no-repeat;
-  background-position:-500px; 
+  /*background-position:-500px; */
 }
 
 *[data-count='three'] {
@@ -77,7 +77,7 @@ html {
 
 *[data-count='three']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/bgbackend.png")  center/cover no-repeat;
-  background-position:-100px; 
+  background-position: 0px; 
 }
 
 *[data-count='four'] {
@@ -86,7 +86,7 @@ html {
 
 *[data-count='four']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/frontend.png")  center/cover no-repeat;
-  background-position: -500px;
+  /*background-position: -500px;*/
 }
 /* --- TEXT --- */
 
