--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -48,7 +48,8 @@
 	background: rgba(0, 0, 0, 0.3);
 }
 body{
-	overflow: hidden;
+	/*overflow: hidden;*/
+	overflow: scroll;
 }
 .menu.up-down:hover{
 	 -webkit-filter: invert(.8); 
@@ -63,7 +64,7 @@ body{
 	text-align: center;
 }
 .bgpillars {
-	background: url("../images/services/frontend.png");
+	/*background: url("../images/services/frontend.png");*/
 	width: 100% !important;
 	min-height: 400px !important;
 	background-repeat: no-repeat;
@@ -224,14 +225,14 @@ p.label {
     margin-right:10px;
 }
 .footer-section {
-    /* position: absolute; */
+     position: fixed; 
     bottom: 0%;
     height: 50px;
     width: 100%;
     padding: 5px;
     color: #fff;
     background-color: rgba(0, 0, 0, 1);
-    /* z-index:  10000; */
+     /*z-index:  10000; */
 }
 #fp-nav{
 	display:none;
@@ -276,7 +277,7 @@ span.head {
 .services-content {
 	min-height: 768px !important;
 	/* max-height: 768px; */
-	/* overflow: scroll; */
+	 overflow: scroll; 
 }
 .paragraph tr td:nth-child(1) {
 	vertical-align: top;
@@ -461,7 +462,7 @@ label{
 	/* Desktop */
 	.services-content {
 		padding: 50px 30px 100px 30px !important;
-		/* overflow: scroll !important; */
+		 overflow: scroll !important; 
 	}
 	.service-banner {
 		min-height: 768px
@@ -517,7 +518,7 @@ label{
 	}
 	.services-content {
 		padding: 50px 20px 30px 20px !important;
-		/* overflow: scroll !important; */
+		 overflow: scroll !important; 
 	}
 	td, th {
 		padding: 5px 5px !important;
@@ -795,24 +796,27 @@ label{
 }
 @media screen and (orientation:landscape) {
 	#lead {
-		background-position: -300px;
+		/*background-position: -300px;*/
 	}
 	#backend {
-		background-position: center;
+		/*background-position: center;*/
 	}
 	#frontend {
-		background-position: -300px 0px;
+		/*background-position: -300px 0px;*/
 	}
 	#social {
-		background-position: center;
+		/*background-position: center;*/
 	}
 	#webdev {
-		background-position: -300px;
+		/*background-position: -300px;*/
 	}
 	#marketing {
-		background-position: -200px;
+		/*background-position: -200px;*/
 	}
 	h4{
 	    font-size: 30px !important;
+	}
+	#nodes .list .title{
+		display: none;
 	}
  
