--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -326,6 +326,10 @@ label{
 	input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
 		font-size: 24px !important;
 	}
+	.node .title{
+		display: none !important;
+	}
+
 }
 /* iPad */
 @media (width: 768px) and (height: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
@@ -359,9 +363,12 @@ label{
 	input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
 		font-size: 24px !important;
 	}
+	.node .title{
+		display: none !important;
+	}
 }
 
-@media (width: 768px) and (height: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media (width: 1024px) and (height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
   	/*Pillars*/
   	.panel{
 	    width: 50% !important;
@@ -391,6 +398,9 @@ label{
 	}
 	input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
 		font-size: 24px !important;
+	}
+	.node .title{
+		display: none !important;
 	}
 }
 
@@ -426,6 +436,9 @@ label{
 	}
 	input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
 		font-size: 24px !important;
+	}
+	.node .title{
+		display: none !important;
 	}
 }
 @media (height: 1024px) and (width: 768px) and (-webkit-min-device-pixel-ratio: 1.5) {
@@ -576,6 +589,9 @@ label{
 		width:50%;
 		height:50%;
 	}
+	.node .title{
+		display: none !important;
+	}
 }
 @media screen and (max-width: 993px) and (orientation: portrait) { 
 	/* Smartphones */
@@ -616,6 +632,7 @@ label{
 	}
 	.node .title {
 		font-size: 10px;
+		display: none !important;
 	}
 	.node .image{
 		display:none;
@@ -794,7 +811,7 @@ label{
 	    font-size: 30px !important;
 	}
 }
-@media screen and (orientation:landscape) {
+@media screen and (max-width: 1040px) and (orientation:landscape) {
 	#lead {
 		/*background-position: -300px;*/
 	}
@@ -802,7 +819,7 @@ label{
 		/*background-position: center;*/
 	}
 	#frontend {
-		/*background-position: -300px 0px;*/
+		background-position: -300px;
 	}
 	#social {
 		/*background-position: center;*/
@@ -811,12 +828,12 @@ label{
 		/*background-position: -300px;*/
 	}
 	#marketing {
-		/*background-position: -200px;*/
+		background-position: -350px !important;
 	}
 	h4{
 	    font-size: 30px !important;
 	}
-	#nodes .list .title{
-		display: none;
+	.node .title{
+		display: none !important;
 	}
  
