--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -21,28 +21,40 @@
 }
 
 .menu i.home{
-	content: url(../images/icons/home.png) !important;
+	background: url(../images/icons/home.png) no-repeat !important;
+	background-size: contain !important; 
 	width: 100%;
+	height: 100%;
 }
 .menu i.prev{
-	content: url(../images/icons/back.png) !important;
+	background: url(../images/icons/back.png) no-repeat !important;
+	background-size: contain !important; 
 	width: 100%;
+	height: 100%;
 }
 .menu i.next{
-	content: url(../images/icons/next.png) !important;
+	background: url(../images/icons/next.png) no-repeat !important;
+	background-size: contain !important; 
 	width: 100%;
+	height: 100%;
 }
 .menu i.nav{
-	content: url(../images/icons/nav.png) !important;
+	background: url(../images/icons/nav.png) no-repeat !important;
+	background-size: contain !important;
 	width: 100%;
+	height: 100%;
 }
 .menu i.mouse{
-	content: url(../images/icons/ms.png) !important;
+	background: url(../images/icons/ms.png) no-repeat !important;
+	background-size: contain !important; 
 	width: 100%;
+	height: 100%;
 }
 .mouse-holder{
-	position:  absolute;
-	width: 100%;
+	
+position:  absolute;
+	
+width: 100%;
 }
 .menu.up-down{
 	animation: up-down 1s infinite;
@@ -292,6 +304,19 @@ label{
 	text-align: left !important;
 }
 
+.picker__frame{
+    vertical-align: middle !important;
+    position: absolute !important;
+    height: 0% !important;
+    width: 100% !important;
+    margin: auto !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+}
+
+
 /* iPad Pro */
 @media (width: 1024px) and (height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
   	/*Pillars*/
@@ -520,6 +545,9 @@ label{
 	#display_pillar{
 		height: 100%;
 	}
+	svg{
+		width:600px !important;
+	}
 }
 @media (min-width: 602px) and (max-width: 993px) {
 	/* Tablet */
@@ -528,7 +556,6 @@ label{
 	}
 	.services-content {
 		padding: 50px 20px 30px 20px !important;
-		 overflow: scroll !important; 
 	}
 	td, th {
 		padding: 5px 5px !important;
@@ -589,6 +616,9 @@ label{
 	.node .title{
 		display: none !important;
 	}
+	svg{
+		width:350px !important;
+	}
 }
 @media screen and (max-width: 993px) and (orientation: portrait) { 
 	/* Smartphones */
@@ -639,7 +669,7 @@ label{
 		width: 100% !important;
 	}
 	svg:not(:root) {
-		max-height: 250px !important;
+		height: 250px !important;
 	}
 	.fullwidth {
 		overflow-x: scroll !important;
@@ -813,6 +843,9 @@ label{
 		width:100%;
 		float: left;
 	}
+	svg{
+		width:600px !important;
+	}
 }
 @media screen and (max-width: 1040px) and (orientation:landscape) {
 	#lead {
@@ -839,4 +872,7 @@ label{
 	.node .title{
 		display: none !important;
 	}
- 
+	svg{
+		width:600px !important;
+	}
+}
