--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -6,6 +6,10 @@
 	stroke: transparent;
 }*/
 
+svg{
+	width:600px;
+}
+
 svg circle.fill-white {
 	fill: #f9f9f9;
 	stroke-width: 10;
@@ -34,6 +38,7 @@ svg #svgg path.st0 {
 	}
 	svg:not(:root) {
 		height: 250px !important;
+		width: 350px !important;
 	}
 }
 
@@ -82,7 +87,7 @@ svg #svgg path.st0 {
 
 @-webkit-keyframes deegeelab-pulse {
 	0% {
-		-webkit-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
+		-webkit-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.2);
 	}
 	70% {
 		-webkit-box-shadow: 0 0 0 30px rgba(2, 186, 208, 0);
@@ -93,16 +98,22 @@ svg #svgg path.st0 {
 }
 @keyframes deegeelab-pulse {
 	0% {
-		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
-		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
+		-o-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.2);
+		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.2);
+		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.2);
+		background: #fff;
 	}
 	70% {
+		-o-box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
 		-moz-box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
 		box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
+		background: #e6e6e6;
 	}
 	100% {
+		-o-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
 		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
 		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
+		background: #f1f1f1;
 	}
 }
 
