--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -304,17 +304,25 @@ label{
 	text-align: left !important;
 }
 
+.picker__holder{
+	position:  absolute !important;
+	top: 10% !important;
+	width: 100%;
+	height: 100%;
+	z-index: 100000;
+}
 .picker__frame{
     vertical-align: middle !important;
     position: absolute !important;
-    height: 0% !important;
+    height: 100% !important;
     width: 100% !important;
     margin: auto !important;
-    top: 0 !important;
+    /* top: 0 !important; */
     bottom: 0 !important;
     left: 0 !important;
     right: 0 !important;
 }
+
 
 
 /* iPad Pro */
