--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -86,7 +86,7 @@ html {
 
 *[data-count='four']:hover {
   background: rgba(99, 98, 98, 0.1) url("../images/services/frontend.png")  center/cover no-repeat;
-  /*background-position: -500px;*/
+  background-position: -200px;
 }
 /* --- TEXT --- */
 
