--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -223,7 +223,7 @@ p.label {
 }
 .footer-section ul li{
     /*min-width: 40px;*/
-    margin-left:20px;
+    margin-left:30px;
     display:inline-block;
     height: 0px;
 }
@@ -339,6 +339,44 @@ label{
 	}
 	.node .title{
 		display: none !important;
+	}#lead {
+	    background-position: 0px 0px !important;
+	    background-attachment: scroll !important;
+	    width: 100% !important;
+	    height: 435px !important;
+	}
+	#backend {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#frontend {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#social {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#webdev {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#marketing {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	.services-content{
+		width: 100% !important;
 	}
 
 }
@@ -377,6 +415,45 @@ label{
 	.node .title{
 		display: none !important;
 	}
+	#lead {
+	    background-position: 0px 0px !important;
+	    background-attachment: scroll !important;
+	    width: 100% !important;
+	    height: 435px !important;
+	}
+	#backend {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#frontend {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#social {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#webdev {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	#marketing {
+		background-attachment: scroll !important;
+		background-position: 0px 0px !important;
+		width: 100% !important;
+	    height: 435px !important;
+	}
+	.services-content{
+		width: 100% !important;
+	}
 }
 
 @media (width: 1024px) and (height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
@@ -409,6 +486,38 @@ label{
 	/* for frontend image position*/
 	*[data-count='four']:hover {
 	 	background-position: 0px !important;
+	}
+	#lead {
+		background-attachment: scroll !important;
+		background-position: -600px !important;
+	}
+	#backend {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#frontend {
+		background-attachment: scroll !important;
+		background-position: -850px !important;
+	}
+	#social {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#webdev {
+		background-attachment: scroll !important;
+	}
+	#marketing {
+		background-attachment: scroll !important;
+		background-position: -900px !important;
+	}
+	h4{
+	    font-size: 30px !important;
+	}
+	.node .title{
+		display: none !important;
+	}
+	svg{
+		width:600px !important;
 	}
 }
 
@@ -460,6 +569,29 @@ label{
 	}
 	*[data-count='four']:hover {
 	 	background-position: -728px !important;
+	}
+	#lead {
+		background-attachment: scroll !important;
+		background-position: -350px !important;
+	}
+	#backend {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#frontend {
+		background-attachment: scroll !important;
+		background-position: -850px !important;
+	}
+	#social {
+		background-attachment: scroll !important;
+		background-position: -200px !important;
+	}
+	#webdev {
+		background-attachment: scroll !important;
+	}
+	#marketing {
+		background-attachment: scroll !important;
+		background-position: -800px !important;
 	}
 }
 @media (height: 1024px) and (width: 768px) and (-webkit-min-device-pixel-ratio: 1.5) {
@@ -873,21 +1005,21 @@ label{
 		width:600px !important;
 	}
 }
-@media screen and (max-width: 1040px) and (orientation:landscape) {
+/*@media screen and (max-width: 1040px) and (orientation:landscape) {
 	#lead {
 		background-position: -500px !important;
 	}
 	#backend {
-		/*background-position: center;*/
+		background-position: center;
 	}
 	#frontend {
 		background-position: -500px !important;
 	}
 	#social {
-		/*background-position: center;*/
+		background-position: center;
 	}
 	#webdev {
-		/*background-position: -300px;*/
+		background-position: -300px;
 	}
 	#marketing {
 		background-position: -500px !important;
@@ -901,4 +1033,4 @@ label{
 	svg{
 		width:600px !important;
 	}
-}
+}*/
